# BoilingPointAnalysis

./: Changelog.md  Guideline.md  README.md  pipeline_complete_gpu.sh  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
analysis/: analyze_alpha.py  analyze_slab.py
benchmarks/: Event_transformer_benchmark.py  financial_analysis.py  gdelt_market_analysis.py  getter_one_benchmark.py  getter_one_benchmark2.py  global_market_analysis.py  hell_mode_benchmark.py  hell_mode_benchmark2.py  sector_analysis.py
benchmarks/Result_Bench/: benchmark_results_20repeats.csv  hell_mode_results_5repeats.csv
benchmarks/event_transformer/: event_12draw_test.csv  event_12draw_val.csv  event_bankai_test.csv  event_bankai_train.csv  event_bankai_val.csv  event_combined_test.csv  event_combined_val.csv  event_raw_test.csv  event_raw_train.csv  event_raw_val.csv
flc/: Fitting_gpu.py  simulate_lambda.py  simulate_lambda_v2.py
getter-one/: pipeline.py
getter-one/analysis/: __init__.py
getter-one/data/: __init__.py  loader.py
getter-one/detection/: anomaly_detection_gpu.py  extended_detection_gpu.py  phase_space_gpu.py
getter-one/structures/: __init__.py  lambda_structures_core.py
getter_one/: __init__.py  __main__.py  cli.py  models.py  pipeline.py  pipeline_detection.py  pipeline_network.py  pipeline_v2.py
getter_one/analysis/: __init__.py  cascade_tracker.py  confidence_kit.py  inverse_checker.py  network_analyzer_core.py  report_generator.py
getter_one/core/: __init__.py  gpu_inverse.py  gpu_kernels.py  gpu_memory.py  gpu_patches.py  gpu_utils.py
getter_one/data/: __init__.py  loader.py
getter_one/detection/: boundary_detection_gpu.py  phase_space_gpu.py  topology_breaks_gpu.py
getter_one/structures/: __init__.py  lambda_structures_core.py  lambda_structures_dual_core.py
tests/: test_getter_one.py
