[build-system]
requires = ["setuptools>=68.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getter-one"
version = "0.3.1"
description = "GETTER One: Geometric Event-driven Tensor-based Time-series Extraction & Recognition - Structural event detection and causal network extraction for N-dimensional time series"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Masamichi Iizumi&Tamaki", email = "m.iizumi@miosync.email"},
]
maintainers = [
    {name = "Masamichi Iizumi&Tamaki", email = "m.iizumi@miosync.email"},
]
keywords = [
    "time-series",
    "event-detection",
    "causal-inference",
    "structural-analysis",
    "tensor-field",
    "network-extraction",
    "discrete-geometry",
    "multivariate",
    "lambda3",
    "getter-one",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.22.0",
    "scipy>=1.9.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
gpu = [
    "cupy-cuda12x>=13.0.0",
]
gpu-cuda11 = [
    "cupy-cuda11x>=12.0.0",
]
viz = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]
excel = [
    "openpyxl>=3.0.0",
]
parquet = [
    "pyarrow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]
full = [
    "getter-one[gpu,viz,excel,parquet,dev]",
]

[project.urls]
Homepage = "https://github.com/miosync-masa/getter-one"
Repository = "https://github.com/miosync-masa/getter-one"
Issues = "https://github.com/miosync-masa/getter-one/issues"

[project.scripts]
getter-one = "getter_one.cli:main"
getter-one-loader = "getter_one.data.loader:main"

# === Build Configuration ===

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["getter_one*"]
exclude = ["tests*", "docs*", "examples*", "benchmarks*"]

# === Tool Configuration ===

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B905",   # zip strict
    "SIM108", # ternary operator
    "W293",   # blank line contains whitespace (CUDA kernel strings)
    "W291",   # trailing whitespace
    "N803",   # argument not lowercase (lambda_F, Q_lambda)
    "N805",   # first arg not self
    "N806",   # variable not lowercase
    "B009",   # getattr with constant
    "E402",   # import not at top (lazy imports)
    "E741",   # ambiguous variable name
    "N802",   # function name not lowercase (_compute_lambda_F)
    "B007",   # unused loop control variable
    "SIM102", # nested if
]

[tool.ruff.lint.isort]
known-first-party = ["getter_one"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "gpu: marks tests requiring GPU (deselect with '-m \"not gpu\"')",
    "slow: marks tests that take >30s (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning:cupy.*",
]
